# fastapi-htmx

./: .gitignore  .pre-commit-config.yaml  LICENCE.md  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: github-actions-tests.yml
fastapi_htmx/: __init__.py  htmx.py
scripts/: bump_version.sh  publish.sh
tests/: test_async.py  test_fallbacks.py  test_headers.py  test_raising.py  test_readme.py  test_sync.py
tests/templates/: customers.jinja2  index.jinja2
