[tool.poetry]
name = "fastapi-htmx"
version = "0.2.3"
description = "Extension for FastAPI to make HTMX easier to use."
authors = ["maces <fastapi-htmx@mzip.de>"]
license = "LGPL"
readme = "README.md"
homepage = "https://github.com/maces/fastapi-htmx"
keywords = ["fastapi", "htmx", "html", "jinja2"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries",
    "Environment :: Web Environment",
    "Environment :: Plugins",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Framework :: AsyncIO",
    "Framework :: FastAPI",
    "Typing :: Typed"
]

packages = [
    {include = "fastapi_htmx"},
    {include = "fastapi_htmx/py.typed"}
]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = ">=0.94,^0.104"
jinja2 = "^3.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.0.254"
black = "^23.1.0"
mypy = "^1.1.1"
pre-commit = "^3.1.1"
pytest = "^7.2.2"
pytest-cov = "^4.0.0"
httpx = "^0.23.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py310']

[tool.isort]
profile = "black"

[tool.ruff]
line-length = 120
target-version = "py310"
select = [
    # Pyflakes
    "F",
    # Pycodestyle
    "E",
    "W",
    # pydocstyle
    "D",
    # isort
    "I",
    # mccabe
    "C90",
    # PEP8 naming
    "N",
    # bandit
    "S",
    # RUFF
    "RUF",
    # pyupgrade
    "UP",
]
ignore = ["D406", "D407", "D203", "D213"]

[tool.ruff.per-file-ignores]
"tests/*" = ["S101", "D100", "D103", "D104"]

[tool.pytest.ini_options]
addopts = "--cov=fastapi_htmx --cov-branch --cov-report term --cov-report html"
